# Random-Bose-Hubbard

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  plot.py
include/: analysis.hpp  hamiltonian.hpp  neighbours.hpp  operator.hpp  resource.hpp
src/: analysis.cpp  hamiltonian.cpp  main.cpp  neighbours.cpp  operator.cpp  resource.cpp
